llvm/test/tools/llubi/dereferenceable_capture_read_provenance.ll
; NOTE: Assertions have been autogenerated by utils/update_llubi_test_checks.py UTC_ARGS: --version 6
; RUN: not llubi --verbose < %s 2>&1 | FileCheck %s

define ptr @address_only(ptr captures(address) %p) {
  ret ptr %p
}

@g = global i8 0

define void @main() {
  %g_address_only = call ptr @address_only(ptr @g)
  call void @llvm.assume(i1 true) ["dereferenceable"(ptr %g_address_only, i32 1)]
  ret void
}
; CHECK: Entering function: main
; CHECK-NEXT: Entering function: address_only
; CHECK-NEXT:   ptr %p = ptr 0x8 [@g]
; CHECK-NEXT:   ret ptr %p
; CHECK-NEXT: Exiting function: address_only
; CHECK-NEXT:   %g_address_only = call ptr @address_only(ptr @g) => ptr 0x8 [@g address]
; CHECK-NEXT: Stacktrace:
; CHECK-NEXT: #0   call void @llvm.assume(i1 true) [ "dereferenceable"(ptr %g_address_only, i32 1) ] at @main <stdin>:12
; CHECK-NEXT: Immediate UB detected: The pointer ptr 0x8 [@g address] violates dereferenceable(1) assumption.
; CHECK-NEXT: error: Execution of function 'main' failed.
